--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -85,7 +85,7 @@ jobs:
           [
             "nexus"
           ]
-        output_file: C:\Users\abhi-dutta\.m2\settings.xml
+        output_file: "C:\\Users\\abhi-dutta\\.m2\\settings.xml"
 
   #  - name: Display File Content
    # - run: |
