--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -71,8 +71,8 @@ jobs:
           [
             {
               "id": "nexus",
-              "username": "${{ secret.USER }}",
-              "password": "${{ secret.PASS }}"
+              "username": ${{ secret.USER }},
+              "password": ${{ secret.PASS }}
             }
           ]
         profiles: >
