--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -33,7 +33,7 @@ jobs:
     #   - https://gh.io/supported-runners-and-hardware-resources
     #   - https://gh.io/using-larger-runners
     # Consider using larger runners for possible analysis time improvements.
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
@@ -54,6 +54,7 @@ jobs:
         pwd
         echo "Home Directory: $HOME"
         ls -a $HOME
+        mavn -v
     
     - name: Checkout repository
       uses: actions/checkout@v4
