--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -55,6 +55,7 @@ jobs:
         echo "Home Directory: $HOME"
         ls -a $HOME
         mvn -v
+        cd /home/runner/.m2
     
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -92,7 +93,7 @@ jobs:
 
     - name: Display File Content
       run: |
-        cp /home/runner/work/MyVulApp-Ubuntu/MyVulApp-Ubuntu/.m2/settings.xml /home/runner/.m2/
+        cp /home/runner/work/MyVulApp-Ubuntu/MyVulApp-Ubuntu/.m2/settings.xml /home/runner/.m2
         cat /home/runner/.m2/settings.xml
 
 
